# spec_detect

./: Cargo.toml  forker.rb  spec_detect.toml
src/: app.rs  app_state.rs  cli.rs  code_repo.rs  configuration.rs  event.rs  input.rs  main.rs  program.rs  repo_watcher.rs  rspec_test.rs  ruby.rs  some_loop.rs  test_runner.rs  ui.rs  watcher.rs
src/event/: watcher.rs
src/repo_watcher/: changed_file.rs  code_repo.rs
src/ruby/: mod.rs  rspec.rs
src/test_runner/: test_file_run.rs  test_map.rs  test_run.rs  test_suite.rs
src/util/: mod.rs  path_filter.rs  path_sort.rs
test/: example_specs.rb  rust_rspec_formatter.rb  specs.rb
