[package]
name = "spec_detect"
version = "0.1.0"
authors = ["Jeremy Wells <jemmyw@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "*"
crossbeam-channel = "0.4.0"
notify = "4.0.12"
crossterm = "*"
tui = "*"
termion = "*"