[package]
authors = ["Jeremy Wells <jemmyw@gmail.com>"]
edition = "2018"
name = "spec_detect"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "spec_detect"
path = "src/main.rs"

[[bin]]
name = "rspec_test"
path = "src/rspec_test.rs"

[dependencies]
anyhow = "1.0"
config = "0.10.1"
crossbeam-channel = "0.4.0"
crossterm = "*"
git2 = "*"
globber = "0.1"
notify = "4.0.12"
owning_ref = "0.4.1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
state = {version = "0.2", features = ["tls"]}
structopt = {version = "0.3"}
termion = "*"
tokio = {version = "0.2", features = ["full", "stream"]}
tui = "*"
